syntax = "proto3";
option go_package = "github.com/0x00b/gobbq/frame/frameproto;frameproto";
package frameproto;

import "bbq.proto";
import "google/protobuf/empty.proto";
 
 
service FrameSever {
	option (bbq.service_type) = Entity;

	rpc Heartbeat(HeartbeatReq) returns(HeartbeatRsp) {}

	rpc Init(InitReq) returns(InitRsp) {}
	// 客户端加入
	rpc Join(JoinReq) returns(JoinRsp) {}
	// 客户端上报加载进度
	rpc Progress(ProgressReq) returns(google.protobuf.Empty) {}
	// 客户端准备好
	rpc Ready(ReadyReq) returns(google.protobuf.Empty) {}
	// 客户端的操作
	rpc Input(InputReq) returns(google.protobuf.Empty) {}
	// 上报结束
	rpc GameOver(GameOverReq) returns(google.protobuf.Empty) {}
}
 
service FrameClient {
	option (bbq.service_type) = Entity;

	// 通知客户端其他人加载进度
	rpc Progress(ProgressReq) returns(google.protobuf.Empty) {}
	// 通知客户端开始
	rpc Start(StartReq) returns(google.protobuf.Empty) {}
	// 帧下发
	rpc Frame(FrameReq) returns(google.protobuf.Empty) {}
	// 游戏结束
	rpc GameOver(GameOverReq) returns(google.protobuf.Empty) {}

}

message Position {
	int32 x = 1;
	int32 y = 2;
	int32 z = 3;
}

enum OPID {
	None = 0;
	Move = 1;
}

message InputData{
    OPID OPID = 1;    //操作id
    Position Pos = 2;    //操作位置
}

message FrameData{
	uint64 Id = 1; // id可以是座位编号，uid，序号等，只要能区分就行
	InputData Input = 2;
}

message Frame{
    uint32 FrameID	= 1;    //帧ID
	repeated FrameData Data  = 2;
}

// client input
message InputReq{
	uint64 Id = 1;
	InputData Input = 2;
}

// server to client frame
message FrameReq {
	repeated Frame Frames 	= 1;
}

message HeartbeatReq{
	uint64 Id = 1; 
}
message HeartbeatRsp{
}

message InitReq{
	int32 PlayerNum = 1;

}

message InitRsp{
}

message JoinReq{
	uint64 Id = 1; 
}

message JoinRsp{
}

message ProgressReq{
	uint64 Id = 1; 
	int32 LoadingProgress = 2;
}

message ReadyReq{
	uint64 Id = 1; 
}

message StartReq {
}

message GameOverReq {
	uint64 Id = 1;
	int32 Result = 2;
}